--- a/style.css
+++ b/style.css
@@ -1,19 +1,38 @@
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap');
+
+
+@font-face {
+  font-family: "DMSerif";
+  src: url(./assets/fonts/DMSerifDisplay-Regular.ttf);
+}
+
+
+
+
 
 body {
   font-family: Montserrat, Helvetica, sans-serif;
   margin: 0;
+  min-height: 100vh; 
 }
 
+header {
+  height: 70px;
+}
 nav{
-    background: teal;
    /* position: fixed;*/
     width: 100%;
-    height: 50px;
-    background-color: #555;
+    height: 100%;
+    background-color: rgba(237, 224, 212, 0.7);
     display: flex;
     flex-direction: row;
-
+    justify-content: space-around;
 }
+
+nav * {
+  margin: 5px;
+} 
 
 .navbar a {
     float: left;
@@ -34,24 +53,33 @@ nav{
 
 .iconSide{
     width: 60px;
-    height: 60px;
+  /* opacity: 0;*/
 }
 
 .iconSide a{
     width: 60px;
     height: 60px;
 }
+
 ul {
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding: 0;
     margin: 0;
+    padding: 0px;
+    margin: 0px;
   }
 
   .link{
-    width: 70%;
+    width: 60%;
+  
+   font-size: 0px;
+  }
 
+  .link a {
+    color : black;
+    text-decoration: none;
   }
 
   
@@ -63,6 +91,7 @@ ul {
     align-items: center;
     list-style-type: none;
   }
+
 /*------------------Menu --------------*/
 /*------------------Home --------------*/
   
@@ -72,23 +101,84 @@ ul {
     height: 700px;
     margin: 0;
     padding: 0;
-    background: url("bienvenue.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background: url(img/bienvenue.jpg) center/cover;
+    
     display: flex;
     justify-content: center;
     align-content: center;
   }
 
   .contentBienvenu{
-
+    background: rgba(237, 224, 212, 0.301);
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     font-size: 30px;
     color: white;
     transform: translateZ(-200px); 
+    font-family: 'Oswald', sans-serif;
+    width: 70%;
+    text-align: center;
+    /* offset-x | offset-y | blur-radius | spread-radius | color */
+    box-shadow: 0px 10px 1px 10px rgb(237 223 170 / 40%)
+
   }
 
+.contentBienvenu span {
+  letter-spacing: 20px;
+  font-size: 68px;
+  text-shadow: 0 0 17px rgb(233 134 77);
+}
+
+.contentBienvenu p {
+  letter-spacing: 20px;
+  font-size: 35px;
+  font-family: 'Roboto', sans-serif;
+}
+
+
+/*------------------Home Carousel --------------*/
+
+.contentCarousel {
+  height: 50vh;
+  background: red;
+  display: flex;
+  flex-direction: column;
+}
+
+.carousel  {
+  height: 50%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  background: white;
+
+}
+.carteContent{
+  height: 90%;
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    background: rgb(229 186 149 / 89%);
+    margin: 5px;
+    padding: 10px 0px 10px 0px;
+    border-radius: 15px;
+}
+
+ 
+
+.carte{
+
+  background: rebeccapurple;
+  display: flex;
+  flex-direction: column;
+}
+
+.carte  img {
+  height: 129px;
+  width: 100%;
+}
   
+.infoCarte{
+  text-align: center;
+}
