--- a/css/home.css
+++ b/css/home.css
@@ -1,7 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Montserrat", sans-serif;
+}
 
 body {
-  font-family: Montserrat, Helvetica, sans-serif;
   margin: 0;
   min-height: 100vh;
 }
@@ -11,7 +16,6 @@ header {
 }
 
 nav {
-  /* position: fixed;*/
   width: 100%;
   height: 100%;
   background-color: rgba(237, 224, 212, 0.7);
@@ -135,42 +139,95 @@ ul {
   text-decoration: underline;
 }
 
-/* styles.css */
-.carousel-container {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  max-width: 1000px; /* Set a max width for the carousel */
-  margin: auto;
+#cadreCarousel{
+  background-color: rgba(245, 235, 224,1);
 }
 
-.carousel-wrapper {
+.slider-wrapper {
   overflow: hidden;
-  width: 100%;
+  /*margin: 0 70px 55px;*/
+  padding: 40px;
 }
 
-#ligne {
+
+
+.card-list .card-item{
+  color: #FFF;
+  user-select: none;
+  padding: 35px;
   display: flex;
-  transition: transform 0.5s ease-in-out;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  backdrop-filter: blur(30px);
+  background: rgba(227, 213, 202,1);
+  border: 2px solid rgba(213, 189, 175,1);
 }
 
-.carousel-item {
-  flex: 0 0 12.5%; /* 100% / 8 items visible at a time = 12.5% each */
-  box-sizing: border-box;
-  padding: 10px;
-  text-align: center;
-  background: #ccc;
-  margin: 5px;
+.card-list .card-item .user-image {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin-bottom: 40px;
+  border: 3px solid #fff;
+  padding: 4px;
 }
 
-button.prev, button.next {
-  background: #000;
-  color: #fff;
-  border: none;
-  padding: 10px;
+.card-list .card-item .user-profession {
+  font-size: 1.15rem;
+  color: #e3e3e3;
+  font-weight: 500;
+  margin:14px 0 40px;
+}
+
+.card-list .card-item .message-button {
+  font-weight: 1.25rem;
+  padding: 10px 35px;
+  color: #030728;
+  border-radius: 6px;
+  font-weight: 500;
   cursor: pointer;
+  background: #FFF;
+  border: 1px solid transparent;
+  transition: 0.2s ease;
 }
 
-button.prev:hover, button.next:hover {
-  background: #555;
+.card-list .card-item .message-button:hover {
+
+  background: rgba(255,255,255,0.1);
+  border: 1px solid #FFF;
+  color: #FFF;
+}
+
+.slider-wrapper .swiper-pagination-bullet {
+  background: #FFF;
+  height: 15px;
+  width: 15px;
+}
+
+.slider-wrapper .swiper-slide-button {
+  color: #FFF;
+  margin-top: -50px;
+  transition: 0.2s ease;
+}
+
+.slider-wrapper .swiper-slide-button {
+  color: #4658ff;
+}
+
+
+.swiper {
+
+ /* height: 400px;*/
+}
+
+@media (max-width : 768px) {
+  .slider-wrapper {
+      margin: 0 10px 40px;
+  }
+
+  .slider-wrapper .swiper-slide-button{
+      display: none;
+  }
 }
