--- a/css/detail.css
+++ b/css/detail.css
@@ -164,16 +164,44 @@ ul {
     background-color: rgb(214, 241, 61);
     width: 50%;
     margin: 10px;
+    display: flex;
+    flex-direction: row;
 }
 
 #colonnePhoto{
-    
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+#photo {
+    width: 80%;
+}
+#photo img {
+    width: 100%;
+    height: 100%;
 }
 
 #contentInfo {
     background-color: rgb(239, 165, 55);
     width: 50%;
     margin: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    text-align: center;
+}
+
+#description{
+
+}
+
+#prix {
+
+}
+
+#btnAchat {
+
 }
 
 /*------------------Detail -------------*/
