--- a/css/detail.css
+++ b/css/detail.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
   margin: 0;
@@ -107,6 +106,7 @@ ul {
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-radius: 10px ;
 }
 
 
@@ -119,32 +119,39 @@ ul {
 }
 
 #ligneTop {
-    height: 10%;
-    background-color: red;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  height: 10%;
+  background-color: rgba(237, 224, 212, 0.7);
+  color: white;
+  width: 100%;
+  font-size: 25px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  border-radius: 10px;
 }
 
-#historiqueCategorie{
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    justify-content: center;
-}
 
 #btnPreview  {
-    display: flex;
-    flex-direction: row;
-    height: 100%;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+  align-items: center;
+  text-decoration: underline;
+  width: 80%;
+  justify-content: center;
+}
+
+#cadreTitle {
+  background-color: rgba(237, 224, 212, 0.7);
+  width: 60%;
+  height: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 #titleDetail{
     background-color: rgb(31, 196, 225);
-    width: 60%;
-    height: 10%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -155,9 +162,10 @@ ul {
 #contentDetail {
     display: flex;
     flex-direction: row;
-    background-color: rgb(62, 229, 89);
     height: 70%;
     width: 100%;
+    border: 2px solid white;
+    border-radius: 10px;
 }
 
 #contentPhoto{
@@ -177,21 +185,31 @@ ul {
 }
 
 #contentInfo {
-    background-color: rgb(239, 165, 55);
-    width: 50%;
-    margin: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    text-align: center;
+  width: 50%;
+  background-color: rgba(237, 224, 212, 0.7);
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  text-align: center;
+  border: 3px solid white;
+  border-radius: 5px;
 }
 
 #description{
-
+  background-color: rgba(237, 237, 233, 1);
+  border-radius: 5px;
+  padding: 5px;
 }
 
 #prix {
-
+  height: 20%;
+  color: white;
+  text-decoration: underline;
+  font-size: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 #btnAchat {
