--- a/css/menu.css
+++ b/css/menu.css
@@ -1,4 +1,14 @@
 
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Montserrat", sans-serif;
+}
+
+body {
+  margin: 0;
+  min-height: 100vh;
+}
 
 header {
     height: 70px;
