--- a/css/detail.css
+++ b/css/detail.css
@@ -10,79 +10,6 @@ body {
   min-height: 100vh;
 }
 
-header {
-  height: 70px;
-}
-
-nav {
-  width: 100%;
-  height: 100%;
-  background-color: rgba(237, 224, 212, 0.7);
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-}
-
-nav * {
-  margin: 5px;
-}
-
-.navbar a {
-  float: left;
-  padding: 12px;
-  color: white;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-
-.icon {
-  width: 40px;
-  height: 40px;
-  border-radius: 15px;
-}
-
-.iconSide {
-  width: 60px;
-}
-
-.iconSide a {
-  width: 60px;
-  height: 60px;
-}
-
-ul {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding: 0;
-  margin: 0;
-  padding: 0px;
-  margin: 0px;
-}
-
-.link {
-  width: 60%;
-  font-family:DMSerif ;
-  font-size: 0px;
-}
-
-.link a {
-  color: black;
-  text-decoration: none;
-}
-
-
-.link ul {
-  height: 100%;
-  display: flex;
-  justify-content: space-around;
-  align-content: center;
-  align-items: center;
-  list-style-type: none;
-}
-
-/*------------------Menu --------------*/
 
 /*------------------Detail -------------*/
 
@@ -131,7 +58,7 @@ ul {
 }
 
 
-#btnPreview  {
+#lignePreview  {
   display: flex;
   flex-direction: row;
   height: 100%;
@@ -140,6 +67,26 @@ ul {
   width: 80%;
   justify-content: center;
 }
+
+.btnPreview    {
+
+  border: none;
+  background: none;
+  color: white;
+  font-size: 25px;
+}
+
+
+.btnPreview:hover    {
+
+ cursor: pointer;
+ text-decoration: underline red;
+ code {
+  color: red;
+ }
+
+}
+
 
 #cadreTitle {
   background-color: rgba(237, 224, 212, 0.7);
@@ -151,11 +98,14 @@ ul {
 }
 
 #titleDetail{
-    background-color: rgb(31, 196, 225);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(237, 237, 233, 1);
+  font-size: 30px;
+  width: min-content;
+  align-self: center;
+  padding: 10px;
+  border-radius: 5px;
 
 }
 
