--- a/css/home.css
+++ b/css/home.css
@@ -10,79 +10,6 @@ body {
   min-height: 100vh;
 }
 
-header {
-  height: 70px;
-}
-
-nav {
-  width: 100%;
-  height: 100%;
-  background-color: rgba(237, 224, 212, 0.7);
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-}
-
-nav * {
-  margin: 5px;
-}
-
-.navbar a {
-  float: left;
-  padding: 12px;
-  color: white;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-
-.icon {
-  width: 40px;
-  height: 40px;
-  border-radius: 15px;
-}
-
-.iconSide {
-  width: 60px;
-}
-
-.iconSide a {
-  width: 60px;
-  height: 60px;
-}
-
-ul {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding: 0;
-  margin: 0;
-  padding: 0px;
-  margin: 0px;
-}
-
-.link {
-  width: 60%;
-  font-family:DMSerif ;
-  font-size: 0px;
-}
-
-.link a {
-  color: black;
-  text-decoration: none;
-}
-
-
-.link ul {
-  height: 100%;
-  display: flex;
-  justify-content: space-around;
-  align-content: center;
-  align-items: center;
-  list-style-type: none;
-}
-
-/*------------------Menu --------------*/
 /*------------------Home Welcome image  --------------*/
 
 .welcome {
@@ -120,13 +47,16 @@ ul {
 }
 
 .contentBienvenu p {
-  letter-spacing: 20px;
+  color: black;
+  letter-spacing: 8px;
   font-size: 35px;
   font-family: 'Roboto', sans-serif;
+  background: rgba(237, 224, 212, 0.6);
+  border-radius: 15px;
 }
 
 
-/*------------------Home Carousel --------------*/
+/*------------------Home Carousel Begin  --------------*/
 .titleCarousel {
   text-align: center; 
   height: 200px;
@@ -198,6 +128,8 @@ ul {
   background: rgba(255,255,255,0.1);
   border: 1px solid #FFF;
   color: #FFF;
+  cursor: pointer;
+  text-decoration: underline;
 }
 
 .slider-wrapper .swiper-pagination-bullet {
@@ -230,4 +162,93 @@ ul {
   .slider-wrapper .swiper-slide-button{
       display: none;
   }
+}
+
+
+/*------------------Home Carousel End  --------------*/
+
+/*------------------En voir plus Begin   --------------*/
+
+.cadreVoirPlus {
+  height: 200px; 
+  display: flex; 
+  align-items: center; 
+  justify-content: center;
+  background-color: rgb(214, 204, 194);
+}
+
+.btnVoirPlus  {
+  border-radius: 30px ; 
+  height: 80px;
+  width: 200px;
+  border: 2px solid white;
+  font-size: 20px;
+
+}
+
+.btnVoirPlus:hover {
+  background: rgba(255,255,255,0.1);
+  border: 1px solid #FFF;
+  color: #FFF;
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+/*------------------En voir plus End    --------------*/
+
+/*------------------Presentation Marque  begin   --------------*/
+
+.cadreMarque {
+
+  background-color: rgba(245, 235, 224, 1);
+  display: flex;
+  flex-direction: column;
+  height: 400px;
+  justify-content: space-around;
+  align-items: center;;
+  height: 400px;
+}
+
+.titleMarque {
+  text-align: center;
+  height: 150px;
+  background-color: rgba(214, 204, 194,0.4);
+  font-size: 30px;
+  align-content: center;
+  text-decoration: underline;
+  padding: 20px;
+  letter-spacing: 10px;
+  border-radius: 10px ;
+}
+
+.contentMarque {
+  font-size: 25px;
+  margin: 0px 25px 0px 25px;
+  padding: 10px;
+}
+
+/*------------------Presentation Marque  End     --------------*/
+/*------------------Réseaux  Begin   --------------*/
+.reseau {
+ 
+  background-color: rgba(245, 235, 224, 1);
+  height: 300px ;
+  text-align: center;
+}
+.titleReseau {
+  background-color: rgba(227, 213, 202, 0.7);
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  border-radius: 10px;  
+}
+
+
+/*------------------Réseaux End      --------------*/
+
+.footer {
+  background-color: rgba(213, 189, 175,1);
+  height: 150px;
 }
