--- a/css/log.css
+++ b/css/log.css
@@ -1,19 +1,14 @@
 
-
-.iconSide{
-    width: 60px;
-    padding: 15px;
-    border: solid 1px;
-    border-radius: 15px;
-    background-color: rgba(237, 224, 212, 0.7);
-}
-
-.icon {
-    width: 40px;
-    height: 40px;
-    border-radius: 15px;
-}
-
+* {
+    margin: 0;
+    padding: 0;
+    font-family: "Montserrat", sans-serif;
+  }
+  
+  body {
+    margin: 0;
+    min-height: 100vh;
+  }
 .signinSide {
     display: flex;
     flex-direction: column;
