--- a/css/detail.css
+++ b/css/detail.css
@@ -140,7 +140,7 @@ body {
   margin: 10px;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-around;
   text-align: center;
   border: 3px solid white;
   border-radius: 5px;
@@ -160,6 +160,25 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.quantiteSide {
+ 
+  display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.quantiteSide label, .quantiteSide input{
+  padding: 5px;
+  background-color: rgba(237, 237, 233, 1);
+}
+
+.quantiteSide input{ 
+
+  border: 2px solid white;
+  border-radius: 10px;
+  text-align: center;
 }
 
 #btnAchat {
