--- a/css/detail.css
+++ b/css/detail.css
@@ -189,3 +189,11 @@ body {
 }
 
 /*------------------Detail -------------*/
+
+
+/*------------------Panier -------------*/
+
+.titleProduct {
+  color: red;
+  font-size: 20px;
+}
